--- a/PANCANCER02_summary_results_TMD_samples.ipynb
+++ b/PANCANCER02_summary_results_TMD_samples.ipynb
@@ -59,24 +59,7 @@
     "all_read_files = [item for item in pathlib.Path(path_to_01_output).glob(\"*.read_classification.csv\")]\n",
     "\n",
     "##### read countdf: raw count and in-read count number. \n",
-    "if os.path.isfile(os.path.join(path_to_01_output, \"all_count.csv\")) == False:\n",
-    "    all_samples = []\n",
-    "    raw_counts = []\n",
-    "    in_read_counts = []\n",
-    "\n",
-    "    for file in tqdm(all_read_files):\n",
-    "        tmpdf = pd.read_csv(file)\n",
-    "        raw_count = tmpdf.shape[0]\n",
-    "        in_read_count = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"].shape[0]\n",
-    "        all_samples.append(file.name.replace(\".read_classification.csv\", \"\"))\n",
-    "        raw_counts.append(raw_count)\n",
-    "        in_read_counts.append(in_read_count)\n",
-    "\n",
-    "    countdf = pd.DataFrame({\"SampleID\": all_samples, \"raw_count\": raw_counts, \"in_read_count\": in_read_counts})\n",
-    "    countdf.to_csv(os.path.join(path_to_01_output, \"all_count.csv\"))\n",
-    "else:\n",
-    "    print(f\"Countdf existst, reading in from {os.path.join(path_to_01_output, 'all_count.csv')} ...\")\n",
-    "    countdf = pd.read_csv(os.path.join(path_to_01_output, \"all_count.csv\"), index_col = [0])\n",
+    "countdf = pd.read_csv(os.path.join(path_to_01_output, \"all_count.csv\"), index_col = [0])\n",
     "\n",
     "all_samples = []\n",
     "all_mean_candi_reads = []\n",
@@ -103,6 +86,135 @@
     "candidf_test = candidf[candidf[\"Set\"] != \"train\"].copy()\n",
     "\n",
     "candidf.to_excel(os.path.join(path_to_02_output, \"candi_reads_all_{}_vs_control.xlsx\".format(\"PAN_CANCER\")), index = False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>raw_count</th>\n",
+       "      <th>in_read_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HNCRC06</td>\n",
+       "      <td>4265</td>\n",
+       "      <td>4265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HNCRC01</td>\n",
+       "      <td>6999</td>\n",
+       "      <td>6999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CRCB36</td>\n",
+       "      <td>6628</td>\n",
+       "      <td>6628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CRCB15</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>K0034</td>\n",
+       "      <td>6227</td>\n",
+       "      <td>6227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7284</th>\n",
+       "      <td>YCAB90R1</td>\n",
+       "      <td>15889</td>\n",
+       "      <td>15889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7285</th>\n",
+       "      <td>YHAA03</td>\n",
+       "      <td>11943</td>\n",
+       "      <td>11943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7286</th>\n",
+       "      <td>YCAB91</td>\n",
+       "      <td>14455</td>\n",
+       "      <td>14455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7287</th>\n",
+       "      <td>YCAB90</td>\n",
+       "      <td>19675</td>\n",
+       "      <td>19675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7288</th>\n",
+       "      <td>MH020</td>\n",
+       "      <td>178192</td>\n",
+       "      <td>178192</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7289 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      SampleID  raw_count  in_read_count\n",
+       "0      HNCRC06       4265           4265\n",
+       "1      HNCRC01       6999           6999\n",
+       "2       CRCB36       6628           6628\n",
+       "3       CRCB15       7896           7896\n",
+       "4        K0034       6227           6227\n",
+       "...        ...        ...            ...\n",
+       "7284  YCAB90R1      15889          15889\n",
+       "7285    YHAA03      11943          11943\n",
+       "7286    YCAB91      14455          14455\n",
+       "7287    YCAB90      19675          19675\n",
+       "7288     MH020     178192         178192\n",
+       "\n",
+       "[7289 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countdf"
    ]
   },
   {
