--- a/PANCANCER08_spike_in_TF_prediction.ipynb
+++ b/PANCANCER08_spike_in_TF_prediction.ipynb
@@ -56,24 +56,8 @@
     "all_read_files = [item for item in pathlib.Path(path_to_07_output).glob(\"*.read_classification.csv\")]\n",
     "\n",
     "##### read countdf: raw count and in-read count number. \n",
-    "if os.path.isfile(os.path.join(path_to_07_output, \"all_count.csv\")) == False:\n",
-    "    all_samples = []\n",
-    "    raw_counts = []\n",
-    "    in_read_counts = []\n",
-    "\n",
-    "    for file in tqdm(all_read_files):\n",
-    "        tmpdf = pd.read_csv(file)\n",
-    "        raw_count = tmpdf.shape[0]\n",
-    "        in_read_count = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"].shape[0]\n",
-    "        all_samples.append(file.name.replace(\".read_classification.csv\", \"\"))\n",
-    "        raw_counts.append(raw_count)\n",
-    "        in_read_counts.append(in_read_count)\n",
-    "\n",
-    "    countdf = pd.DataFrame({\"SampleID\": all_samples, \"raw_count\": raw_counts, \"in_read_count\": in_read_counts})\n",
-    "    countdf.to_csv(os.path.join(path_to_07_output, \"all_count.csv\"))\n",
-    "else:\n",
-    "    print(f\"Countdf existst, reading in from {os.path.join(path_to_07_output, 'all_count.csv')} ...\")\n",
-    "    countdf = pd.read_csv(os.path.join(path_to_07_output, \"all_count.csv\"), index_col = [0])\n",
+    "print(f\"Countdf existst, reading in from {os.path.join(path_to_07_output, 'all_count.csv')} ...\")\n",
+    "countdf = pd.read_csv(os.path.join(path_to_07_output, \"all_count.csv\"), index_col = [0])\n",
     "\n",
     "all_samples = []\n",
     "all_mean_candi_reads = []\n",
@@ -135,6 +119,252 @@
     "        inputdf = candidf[input_features].copy()\n",
     "        candidf[\"predicted_TF\"] = all_models[i].predict(inputdf.to_numpy())\n",
     "        candidf.to_excel(os.path.join(path_to_08_output, f\"Prediction_{selected_candi_features}_model_{i}_spike_in_data.xlsx\"), index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>num_candi_reads</th>\n",
+       "      <th>raw_count</th>\n",
+       "      <th>in_read_count</th>\n",
+       "      <th>ratio_raw</th>\n",
+       "      <th>ratio_in_reads</th>\n",
+       "      <th>ichorCNA</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>spike_in_ratio</th>\n",
+       "      <th>predicted_TF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KZAZ52_spike_in__005_from_ZNC05S_label_CRC_rep...</td>\n",
+       "      <td>3.232628</td>\n",
+       "      <td>5267</td>\n",
+       "      <td>5267</td>\n",
+       "      <td>0.000614</td>\n",
+       "      <td>0.000614</td>\n",
+       "      <td>0.04019</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.051048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KACE35_spike_in__005_from_ZNB06SR3_label_Breas...</td>\n",
+       "      <td>4.220238</td>\n",
+       "      <td>7273</td>\n",
+       "      <td>7273</td>\n",
+       "      <td>0.000580</td>\n",
+       "      <td>0.000580</td>\n",
+       "      <td>0.04465</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.052930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K2AA15_spike_in__0005_from_ZNC03S_label_CRC_re...</td>\n",
+       "      <td>6.283626</td>\n",
+       "      <td>11638</td>\n",
+       "      <td>11638</td>\n",
+       "      <td>0.000540</td>\n",
+       "      <td>0.000540</td>\n",
+       "      <td>0.03432</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.048571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K0AC37_spike_in__0001_from_ZNL08S_label_Lung_r...</td>\n",
+       "      <td>4.672566</td>\n",
+       "      <td>7788</td>\n",
+       "      <td>7788</td>\n",
+       "      <td>0.000600</td>\n",
+       "      <td>0.000600</td>\n",
+       "      <td>0.04623</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.053596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LBGS087_spike_in__01_from_ZNL15S_label_Lung_re...</td>\n",
+       "      <td>15.511696</td>\n",
+       "      <td>28805</td>\n",
+       "      <td>28805</td>\n",
+       "      <td>0.000539</td>\n",
+       "      <td>0.000539</td>\n",
+       "      <td>0.05653</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.057942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3961</th>\n",
+       "      <td>K4AC16_spike_in__005_from_ZNC04S_label_CRC_rep...</td>\n",
+       "      <td>7.691860</td>\n",
+       "      <td>13063</td>\n",
+       "      <td>13063</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.02653</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.045285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3962</th>\n",
+       "      <td>K2071_spike_in__0001_from_ZNC03S_label_CRC_rep...</td>\n",
+       "      <td>8.781977</td>\n",
+       "      <td>16617</td>\n",
+       "      <td>16617</td>\n",
+       "      <td>0.000528</td>\n",
+       "      <td>0.000528</td>\n",
+       "      <td>0.02762</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.045744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3963</th>\n",
+       "      <td>K4AC10_spike_in__001_from_ZNB03SR2_label_Breas...</td>\n",
+       "      <td>15.970760</td>\n",
+       "      <td>18607</td>\n",
+       "      <td>18607</td>\n",
+       "      <td>0.000858</td>\n",
+       "      <td>0.000858</td>\n",
+       "      <td>0.08085</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.068204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3964</th>\n",
+       "      <td>KAAK49_spike_in__005_from_ZNL09S_label_Lung_re...</td>\n",
+       "      <td>9.073746</td>\n",
+       "      <td>15316</td>\n",
+       "      <td>15316</td>\n",
+       "      <td>0.000592</td>\n",
+       "      <td>0.000592</td>\n",
+       "      <td>0.01833</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.041825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3965</th>\n",
+       "      <td>CRCC5_spike_in__005_from_ZMG048S_label_Gastric...</td>\n",
+       "      <td>15.615160</td>\n",
+       "      <td>26496</td>\n",
+       "      <td>26496</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.000589</td>\n",
+       "      <td>0.03252</td>\n",
+       "      <td>Gastric</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.047812</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3965 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               SampleID  num_candi_reads  \\\n",
+       "0     KZAZ52_spike_in__005_from_ZNC05S_label_CRC_rep...         3.232628   \n",
+       "1     KACE35_spike_in__005_from_ZNB06SR3_label_Breas...         4.220238   \n",
+       "2     K2AA15_spike_in__0005_from_ZNC03S_label_CRC_re...         6.283626   \n",
+       "3     K0AC37_spike_in__0001_from_ZNL08S_label_Lung_r...         4.672566   \n",
+       "4     LBGS087_spike_in__01_from_ZNL15S_label_Lung_re...        15.511696   \n",
+       "...                                                 ...              ...   \n",
+       "3961  K4AC16_spike_in__005_from_ZNC04S_label_CRC_rep...         7.691860   \n",
+       "3962  K2071_spike_in__0001_from_ZNC03S_label_CRC_rep...         8.781977   \n",
+       "3963  K4AC10_spike_in__001_from_ZNB03SR2_label_Breas...        15.970760   \n",
+       "3964  KAAK49_spike_in__005_from_ZNL09S_label_Lung_re...         9.073746   \n",
+       "3965  CRCC5_spike_in__005_from_ZMG048S_label_Gastric...        15.615160   \n",
+       "\n",
+       "      raw_count  in_read_count  ratio_raw  ratio_in_reads  ichorCNA    Label  \\\n",
+       "0          5267           5267   0.000614        0.000614   0.04019      CRC   \n",
+       "1          7273           7273   0.000580        0.000580   0.04465   Breast   \n",
+       "2         11638          11638   0.000540        0.000540   0.03432      CRC   \n",
+       "3          7788           7788   0.000600        0.000600   0.04623     Lung   \n",
+       "4         28805          28805   0.000539        0.000539   0.05653     Lung   \n",
+       "...         ...            ...        ...             ...       ...      ...   \n",
+       "3961      13063          13063   0.000589        0.000589   0.02653      CRC   \n",
+       "3962      16617          16617   0.000528        0.000528   0.02762      CRC   \n",
+       "3963      18607          18607   0.000858        0.000858   0.08085   Breast   \n",
+       "3964      15316          15316   0.000592        0.000592   0.01833     Lung   \n",
+       "3965      26496          26496   0.000589        0.000589   0.03252  Gastric   \n",
+       "\n",
+       "      spike_in_ratio  predicted_TF  \n",
+       "0              0.050      0.051048  \n",
+       "1              0.050      0.052930  \n",
+       "2              0.005      0.048571  \n",
+       "3              0.001      0.053596  \n",
+       "4              0.100      0.057942  \n",
+       "...              ...           ...  \n",
+       "3961           0.050      0.045285  \n",
+       "3962           0.001      0.045744  \n",
+       "3963           0.010      0.068204  \n",
+       "3964           0.050      0.041825  \n",
+       "3965           0.050      0.047812  \n",
+       "\n",
+       "[3965 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidf"
    ]
   }
  ],
