--- a/PANCANCER01_generate_readdf_for_regions.ipynb
+++ b/PANCANCER01_generate_readdf_for_regions.ipynb
@@ -38,7 +38,7 @@
     "data_version = \"TMD_cov\"\n",
     "output_version = \"20240910\"\n",
     "\n",
-    "outdir = \"/media/hieunguyen/HNSD_mini/outdir\"\n",
+    "outdir = \"/media/hieunguyen/GSHD_HN01/outdir\"\n",
     "PROJECT = \"TMD450_TCGA_data_analysis\"\n",
     "thres_hypo = 0.3\n",
     "thres_hyper = 0.6\n",
@@ -103,52 +103,52 @@
     "\n",
     "testdf.to_csv(os.path.join(path_to_01_output, \"testdf_all_regions_for_pan_cancer.csv\"), index = False)\n",
     "\n",
-    "all_samples = []\n",
-    "raw_counts = []\n",
-    "in_read_counts = []\n",
-    "for file in tqdm(all_read_files):\n",
-    "    if os.path.isfile(os.path.join(path_to_01_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\"))) == False:\n",
-    "        tmpdf = pd.read_csv(file, index_col = [0])\n",
-    "        tmpdf[\"read_overlap_rate\"] = tmpdf[[\"start\", \"seq\", \"region\"]].apply(lambda x: check_read_inside_region(x[0], x[1], x[2]), axis = 1)\n",
-    "        raw_count = tmpdf.shape[0]\n",
-    "        in_read_count = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"].shape[0]\n",
-    "        all_samples.append(file.name.replace(\".sorted.csv\", \"\"))\n",
-    "        raw_counts.append(raw_count)\n",
-    "        in_read_counts.append(in_read_count)\n",
+    "# all_samples = []\n",
+    "# raw_counts = []\n",
+    "# in_read_counts = []\n",
+    "# for file in tqdm(all_read_files):\n",
+    "#     if os.path.isfile(os.path.join(path_to_01_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\"))) == False:\n",
+    "#         tmpdf = pd.read_csv(file, index_col = [0])\n",
+    "#         tmpdf[\"read_overlap_rate\"] = tmpdf[[\"start\", \"seq\", \"region\"]].apply(lambda x: check_read_inside_region(x[0], x[1], x[2]), axis = 1)\n",
+    "#         raw_count = tmpdf.shape[0]\n",
+    "#         in_read_count = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"].shape[0]\n",
+    "#         all_samples.append(file.name.replace(\".sorted.csv\", \"\"))\n",
+    "#         raw_counts.append(raw_count)\n",
+    "#         in_read_counts.append(in_read_count)\n",
     "\n",
-    "        ##### keep only reads that are completely inside the region\n",
-    "        tmpdf = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"]\n",
+    "#         ##### keep only reads that are completely inside the region\n",
+    "#         tmpdf = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"]\n",
     "\n",
-    "        ##### assign read type: hyper or hypo reads based on the given thresholds\n",
-    "        tmpdf[\"read_classification\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
+    "#         ##### assign read type: hyper or hypo reads based on the given thresholds\n",
+    "#         tmpdf[\"read_classification\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
     "\n",
-    "        ##### considers only regions that are tested with the TCGA data\n",
-    "        tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
-    "        tmpdf = tmpdf[tmpdf[\"region\"].isin(testdf.Var1.unique())]\n",
-    "        ##### count hypo and hyper reads in each region\n",
-    "        resdf = tmpdf.groupby([\"region\", \"read_classification\"]).seq.count().reset_index().pivot_table(index = \"region\", \n",
-    "                                                                                                        columns = \"read_classification\", \n",
-    "                                                                                                        values = \"seq\").reset_index().fillna(0)\n",
-    "        ##### get the region type from TCGA test results\n",
-    "        resdf[\"region_type\"] = resdf[\"region\"].apply(lambda x: \",\".join(testdf[testdf.Var1 == x].hypo_or_hyper.unique()))\n",
-    "        if \"hyper\" not in resdf.columns:\n",
-    "            resdf[\"hyper\"] = 0\n",
-    "        if \"hypo\" not in resdf.columns:\n",
-    "            resdf[\"hypo\"] = 0\n",
-    "        resdf_orig = resdf.copy()\n",
+    "#         ##### considers only regions that are tested with the TCGA data\n",
+    "#         tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
+    "#         tmpdf = tmpdf[tmpdf[\"region\"].isin(testdf.Var1.unique())]\n",
+    "#         ##### count hypo and hyper reads in each region\n",
+    "#         resdf = tmpdf.groupby([\"region\", \"read_classification\"]).seq.count().reset_index().pivot_table(index = \"region\", \n",
+    "#                                                                                                         columns = \"read_classification\", \n",
+    "#                                                                                                         values = \"seq\").reset_index().fillna(0)\n",
+    "#         ##### get the region type from TCGA test results\n",
+    "#         resdf[\"region_type\"] = resdf[\"region\"].apply(lambda x: \",\".join(testdf[testdf.Var1 == x].hypo_or_hyper.unique()))\n",
+    "#         if \"hyper\" not in resdf.columns:\n",
+    "#             resdf[\"hyper\"] = 0\n",
+    "#         if \"hypo\" not in resdf.columns:\n",
+    "#             resdf[\"hypo\"] = 0\n",
+    "#         resdf_orig = resdf.copy()\n",
     "\n",
-    "        resdf = resdf.assign(region_type=resdf[\"region_type\"].str.split(\",\")).explode(\"region_type\")\n",
+    "#         resdf = resdf.assign(region_type=resdf[\"region_type\"].str.split(\",\")).explode(\"region_type\")\n",
     "\n",
-    "        ##### assign candi reads equal to number of hypo or hyper reads, depending on the region type\n",
-    "        resdf[\"candi_reads\"] = resdf[[\"region_type\", \"hyper\", \"hypo\"]].apply(lambda x: x[1] if x[0] == \"hyper\" else x[2], axis = 1)\n",
+    "#         ##### assign candi reads equal to number of hypo or hyper reads, depending on the region type\n",
+    "#         resdf[\"candi_reads\"] = resdf[[\"region_type\", \"hyper\", \"hypo\"]].apply(lambda x: x[1] if x[0] == \"hyper\" else x[2], axis = 1)\n",
     "        \n",
-    "        ##### save the results\n",
-    "        resdf.to_csv(os.path.join(path_to_01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0])), index = False)\n",
-    "        tmpdf.to_csv(os.path.join(path_to_01_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n",
-    "    else:\n",
-    "        print(\"File {} already exists\".format(file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n",
-    "countdf = pd.DataFrame({\"SampleID\": all_samples, \"raw_count\": raw_counts, \"in_read_count\": in_read_counts})\n",
-    "countdf.to_csv(os.path.join(path_to_01_output, \"all_count.csv\"))\n",
+    "#         ##### save the results\n",
+    "#         resdf.to_csv(os.path.join(path_to_01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0])), index = False)\n",
+    "#         tmpdf.to_csv(os.path.join(path_to_01_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n",
+    "#     else:\n",
+    "#         print(\"File {} already exists\".format(file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n",
+    "# countdf = pd.DataFrame({\"SampleID\": all_samples, \"raw_count\": raw_counts, \"in_read_count\": in_read_counts})\n",
+    "# countdf.to_csv(os.path.join(path_to_01_output, \"all_count.csv\"))\n",
     "\n"
    ]
   },
